--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,7 +64,7 @@
     {% include 'header.html' %}
     <div class="container">
         <h1>Diário da República</h1>
-        <form action="/search" method="GET" class="search-box">
+        <form action="/documentos/search" method="GET" class="search-box">
             <input type="text" name="term" placeholder="Digite sua pesquisa aqui..." class="search-input">
             <button type="submit" class="button">Pesquisar</button>
         </form>
