--- a/app/templates/filtered_documents.html
+++ b/app/templates/filtered_documents.html
@@ -59,7 +59,7 @@
 <body>
     {% include 'header.html' %}
     
-    <h1>Documentos Filtrados</h1>
+    <h1>Documentos filtrados pelo critério "{{criterio_procura}}"</h1>
 
     <table id="tabela_documentos" class="display">
         <thead>
