--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -36,6 +36,7 @@
             <a href="/" class="button">Página Inicial</a>
             <a href="/documentos" class="button">Documentos</a>
             <a href="/autores" class="button">Autores</a>
+            <a href="/tipos" class="button">Tipos</a>
         </div>
     </div>
 </body>
