--- a/app/templates/tipos.html
+++ b/app/templates/tipos.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% include 'layout.html' %}
     <title>Tipos</title>
 </head>
 <body>
     {% include 'header.html' %}
     <h1>Lista de tipos de documento</h1>
+    <div class="container-Emissores">
     <ul>
         {% for tipo in tipos %}
-            <li><a href="/documentos/tipo/{{ tipo }}">{{ tipo }}</a></li>
+            <li><a class="lista" href="/documentos/tipo/{{ tipo }}">{{ tipo }}</a></li>
         {% endfor %}
     </ul>
 </body>
 </html>
+
+
