--- a/app/templates/documentos_por_emissor.html
+++ b/app/templates/documentos_por_emissor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+    {% include 'layout.html' %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +24,9 @@
 
         .dataTables_filter {
             float: right;
+        }
+        body::after {
+            background: whitesmoke;
         }
     </style>
 
