--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -3,7 +3,7 @@
     <!-- Cabeçalho -->
     <div class="header">
         <!-- Logotipo do Diário da República -->
-        <a href="/"><img class="logo" src="{{ url_for('static', filename='img/DRE.png') }}" alt="Diário da República"></a>
+        <a href="/"><img class="logo" src="{{ url_for('static', filename='img/dre.png') }}" alt="Diário da República"></a>
         <!-- Links de navegação -->
         <div class="hearder-referencias">
             <a href="/" class="button">Página Inicial</a>
